Change Chat to lowercase c

--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -441,7 +441,7 @@ parts:
       key: "embeddable_framework.helpCenter.results.button.backToChat"
       title: "A button that is displayed at the bottom when the user has chatted prior viewing the current helpcenter article"
       screenshot: "https://zendesk.box.com/s/bgy6121lonubzyv7yj3xvbvrelc5om15"
-      value: "Back to Chat"
+      value: "Back to chat"
 
   # Mobile
   - translation:
