update chat reconnecting title translation key

--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -77,7 +77,7 @@ parts:
       value: "Chat ended"
       wip: true
   - translation:
-      key: "embeddable_framework.chat.reconnecting.label"
+      key: "embeddable_framework.chat.reconnecting.title"
       title: "The title that displays in the chat reconneting message bubble"
       value: "Reconnecting"
       wip: true
