Render agents typing notification

--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -177,7 +177,17 @@ parts:
       key: "embeddable_framework.chat.chatLog.isTyping"
       title: "An application notifier that signifies that an X person is typing a message"
       screenshot: "https://zendesk.box.com/s/wfm8pdh37ft1kpil1jaaghuo8om5w5wl"
-      value: "{{agent}} is typing..."
+      value: "%(agent)s is typing..."
+  - translation:
+      key: "embeddable_framework.chat.chatLog.isTyping.two"
+      title: "An application notifier that signifies that two agents are typing a message"
+      screenshot: "https://zendesk.box.com/s/wfm8pdh37ft1kpil1jaaghuo8om5w5wl"
+      value: "%(agent1)s & %(agent2)s are typing..."
+  - translation:
+      key: "embeddable_framework.chat.chatLog.isTyping.multiple"
+      title: "An application notifier that signifies that more than two agents are typing a message"
+      screenshot: "https://zendesk.box.com/s/wfm8pdh37ft1kpil1jaaghuo8om5w5wl"
+      value: "Multiple agents are typing..."
   - translation:
       key: "embeddable_framework.chat.chatLog.resend"
       title: "A text displayed on a link or a button that allows the user to resend an unsent message due to disconnection or other circumstances"
