Address inconsistencies with string translation

--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -182,7 +182,7 @@ parts:
       key: "embeddable_framework.chat.chatLog.isTyping.two"
       title: "An application notifier that signifies that two agents are typing a message"
       screenshot: "https://zendesk.box.com/s/emcoootsrmdb36wxh91d19imxdsgu1yr"
-      value: "%(agent1)s & %(agent2)s are typing"
+      value: "%(agent1)s and %(agent2)s are typing"
   - translation:
       key: "embeddable_framework.chat.chatLog.isTyping.multiple"
       title: "An application notifier that signifies that more than two agents are typing a message"
