Add talk component with new icon to ChannelChoiceMenu

--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -374,6 +374,11 @@ parts:
       title: "A notification that appears when a user enters live chat but all agents become unavailable."
       screenshot: "https://zendesk.box.com/s/x2o3nb0yedt4y600n1ge6agmvavdisd4"
       value: "Live chat is offline"
+  - translation:
+      key: "embeddable_framework.channelChoice.button.label.clickToCall"
+      title: "The label for the click to call option in the list."
+      value: "Click to Call"
+      wip: true
 
   # Help Center component
   - translation:
