Add i18n strings for talk

--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -735,3 +735,40 @@ parts:
       screenshot: "https://zendesk.box.com/s/gbj1x0hjotrzqboq01kslqrhqq523rbk"
       hidden: true
       obsolete: "2017-11-06"
+
+  # Talk
+  - translation:
+      key: "embeddable_framework.talk.form.headerMessage"
+      title: "Header message for the callback form which end-users have to fill"
+      screenshot: "https://zendesk.box.com/s/daa78ojuy0g79iaf8mr01bz2w8pa7zbr"
+      value: "Enter your phone number and we'll call you as soon as we can."
+  - translation:
+      key: "embeddable_framework.talk.form.averageWaitTimeSingular"
+      title: "Average wait time in minutes when the wait time is 1 minute"
+      screenshot: "https://zendesk.box.com/s/bbwmucnfk6rze62gpi0cdsa9hz535b4f"
+      value: "Average wait time: 1 minute"
+  - translation:
+      key: "embeddable_framework.talk.form.averageWaitTimePlural"
+      title: "Average wait time in minutes when the wait time more than 1 minute"
+      screenshot: "https://zendesk.box.com/s/bbwmucnfk6rze62gpi0cdsa9hz535b4f"
+      value: "Average wait time: %(averageWaitTime)s minutes"
+  - translation:
+      key: "embeddable_framework.talk.button.submit"
+      title: "Button for submitting the callback request form"
+      screenshot: "https://zendesk.box.com/s/kbu6rd91w1p455f2wlici7xpl441qh2z"
+      value: "Submit"
+  - translation:
+      key: "embeddable_framework.talk.notify.success.message"
+      title: "Message confirming the form submission worked properly and that the customer will call back the user on the number specified. Note we pass the number into the screen"
+      screenshot: "https://zendesk.box.com/s/bmf5rszlqchjfz7q5bngvfgrb8yo6aku"
+      value: "Thanks for submiting your request. We'll get back to you soon on %(displayNumber)s"
+  - translation:
+      key: "embeddable_framework.talk.form.title"
+      title: "Title for the callback request form"
+      screenshot: "https://zendesk.box.com/s/cmbvuwrzhbrsi9dd7ypn65thr65srs2v"
+      value: "Request a callback"
+  - translation:
+      key: "embeddable_framework.talk.notify.success.title"
+      title: "The title of the callback form after it's been submitted correctly"
+      screenshot: "https://zendesk.box.com/s/j0onsjmhm05oxr0aa5ro7i8toznr12oy"
+      value: "Request sent"
