--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -30,7 +30,7 @@ parts:
       key: "embeddable_framework.common.textLabel.phone"
       title: "The label for a generic phone number form field."
       screenshot: "https://zendesk.box.com/s/9f55ahsc3iizdx5csa61hogh8q7h5kux"
-      value: "Phone Number"
+      value: "Phone number"
   - translation:
       key: "embeddable_framework.common.textLabel.name"
       title: "The label for a generic name form field."
@@ -778,16 +778,16 @@ parts:
 
   # Talk
   - translation:
-      key: "embeddable_framework.talk.label.phoneDisplay"
-      title: "An initial text to instruct our users that the following number on the right is available for use to contact us."
-      screenshot: "FIXME - N/A, WIP"
-      value: "Our phone number:"
-      wip: true
-  - translation:
       key: "embeddable_framework.talk.form.headerMessage"
       title: "Header message for the callback form which end-users have to fill"
       screenshot: "https://zendesk.box.com/s/daa78ojuy0g79iaf8mr01bz2w8pa7zbr"
       value: "Enter your phone number and we'll call you as soon as we can."
+      obsolete: "2018-02-02"
+  - translation:
+      key: "embeddable_framework.talk.form.headerMessage_new"
+      title: "Header message for the callback form which end-users have to fill"
+      screenshot: "https://zendesk.box.com/s/x81cx971yox9964upzfrwuwefl7z8x78"
+      value: "Enter your phone number and we'll call you back."
   - translation:
       key: "embeddable_framework.talk.form.averageWaitTimeSingular"
       title: "Average wait time in minutes when the wait time is 1 minute"
@@ -803,6 +803,12 @@ parts:
       title: "Message confirming the form submission worked properly and that the customer will call back the user on the number specified. Note we pass the number into the screen"
       screenshot: "https://zendesk.box.com/s/bmf5rszlqchjfz7q5bngvfgrb8yo6aku"
       value: "Thank you for submitting your request. We'll get back to you soon on %(displayNumber)s"
+      obsolete: "2018-02-02"
+  - translation:
+      key: "embeddable_framework.talk.notify.success.message_new"
+      title: "Message confirming the form submission worked properly and that the customer will call back the user."
+      screenshot: "https://zendesk.box.com/s/2971h3hwl70mmxuxr234fuk8giw8jkuk"
+      value: "Thanks for submitting your request. We'll get back to you soon."
   - translation:
       key: "embeddable_framework.talk.form.title"
       title: "Title for the callback request form"
